--- a/.github/workflows/deploy-on-main-merge.yml
+++ b/.github/workflows/deploy-on-main-merge.yml
@@ -37,6 +37,7 @@ jobs:
           echo "locals {password_db =secrets.PASSWORD_DB}" >> $GITHUB_ENV
 
 
+
       - name: Create S3 Bucket
         run: |
           aws s3 mb s3://pandarium-fiapfood --region us-east-1
@@ -60,7 +61,7 @@ jobs:
       - name: Terraform Plan
         run: |
             if [ "${{ env.destroy }}" == "false" ]; then
-              terraform plan -var-file="execution.tfvars" -var "username=secrets.USERNAME_DB" 
+              terraform plan -var-file="execution.tfvars"  
             # elif [ "${{ env.destroy }}" == "true" ]; then
             #   terraform plan -destroy
             # else
@@ -72,7 +73,7 @@ jobs:
         
         run: |
             if [ "${{ env.destroy }}" == "false" ]; then
-              terraform apply -var-file="execution.tfvars" -auto-approve  -var "instance_type=secrets.USERNAME_DB" 
+              terraform apply -var-file="execution.tfvars" -auto-approve  
               echo "Rodando o apply"
             else
               echo "Action not recognized. No Terraform action taken."
