--- a/.github/workflows/auto_pr_dev_to_main.yml
+++ b/.github/workflows/auto_pr_dev_to_main.yml
@@ -21,3 +21,48 @@ jobs:
           pr_title: "Merge Develop into Main"
           pr_body: "Automated PR to merge `develop` changes into `main`."
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
+  terraformDeploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 1.1.0
+
+      - name: Read .yml file
+        id: read-yml
+        run: |
+          value=$(yq e '.destroy' destroy.yml)
+          echo "destroy=$value" >> $GITHUB_ENV
+
+
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+
+
+
+          
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Set Terraform  & Pass User
+        run: |
+          echo "locals {username=secrets.USERNAME_DB}" >> $GITHUB_ENV
+          echo "locals {password_db =secrets.PASSWORD_DB}" >> $GITHUB_ENV
+
+      - name: Terraform Plan
+        run: |
+            if [ "${{ env.destroy }}" == "false" ]; then
+              terraform plan -var-file="execution.tfvars"  
+            # elif [ "${{ env.destroy }}" == "true" ]; then
+            #   terraform plan -destroy
+            # else
+            #   echo "Action not recognized. No Terraform action taken."
+            fi
+        # run: terraform plan -var-file="execution.tfvars"
+        
