--- a/.github/workflows/auto_pr_dev_to_main.yml
+++ b/.github/workflows/auto_pr_dev_to_main.yml
@@ -58,7 +58,7 @@ jobs:
   createPullRequest:
     needs: terraformDeploy
     runs-on: ubuntu-latest
-    if: ${{ needs.build.result == 'success' }}
+    if: ${{ needs.terraformDeploy.result == 'success' }}
     steps:
       - uses: actions/checkout@v2
 
